fixes focus-nav gvft

--- a/.ratpoisonrc
+++ b/.ratpoisonrc
@@ -2,13 +2,18 @@
 exec xrdb ~/.Xresources
 
 # Creates 6 workspaces, accessible through ALT-F1 .. ALT-F6
-exec /usr/bin/rpws init 6 -k
+exec /usr/bin/rpws init 9 -k
 
 # Start-up xterm in UTF-8 mode 
 bind c exec xterm -u8
 
 #Change frame with j
 bind j focus
+
+bind b focusdown
+bind y focusup
+bind g focusleft 
+bind h focusright
 
 #Make the current frame the only one 
 bind o only
